RESOLVED FIXED314896
[WPE] Shut compiler warnings when building with -DENABLE_WPE_LEGACY_API=ON -DENABLE_WPE_PLATFORM=OFF
https://bugs.webkit.org/show_bug.cgi?id=314896
Summary [WPE] Shut compiler warnings when building with -DENABLE_WPE_LEGACY_API=ON -D...
Claudio Saavedra
Reported 2026-05-15 09:16:48 PDT
.
Attachments
Claudio Saavedra
Comment 1 2026-05-15 09:19:43 PDT
EWS
Comment 2 2026-05-15 11:51:57 PDT
Committed 313320@main (d616b38375e0): <https://commits.webkit.org/313320@main> Reviewed commits have been landed. Closing PR #64993 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.