[WPE] Shut compiler warnings when building with -DENABLE_WPE_LEGACY_API=ON -DENABLE_WPE_PLATFORM=OFF https://bugs.webkit.org/show_bug.cgi?id=314896

Reviewed by Adrian Perez de Castro.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
(WebKit::AcceleratedSurface::SwapChain::SwapChain):

Canonical link: https://commits.webkit.org/313320@main